added start quiz button, larger function for beginning questions and triggering timer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Code Quiz</title>
 </head>
+
 <body>
-    <h1 id="timer">
-    </h1>
+    <h1>Start Code Quiz!</h1>
+    <p>This multiple choice quiz tests your Javascript knowledge.</p>
+    <button class="beginButton">Click to start.</button>
+    <p id="timer">
+    </p>
 
 
     <script src="./script.js"></script>
 </body>
+
 </html>
