function added to check if user chose correct answer. correct/wrong message provided. time reduces if wrong.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </div>
 
     <p id="timer"></p>
-    <h1 id="question"></h1>
-    <button class="a"></button>
-    <button class="b"></button>
-    <button class="c"></button>
-    <button class="d"></button>
 
+    <div class="quiz">
+        <h1 id="question"></h1>
+        <button class="a"></button>
+        <button class="b"></button>
+        <button class="c"></button>
+        <button class="d"></button>
+        <h5 class="correctWrong"></h5>
+    </div>
     <script src="./script.js"></script>
 </body>
 
