--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <button class="d"></button>
         <h5 class="correctWrong"></h5>
     </div>
+
+    <div class="saveInfo">
+        <h1>Quiz Over. Save your score!</h1>
+        <label for="initials">Enter your initials:</label>
+        <input type=text id="initials">
+        <button class="submit">Submit</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
