input page set up. scoreboard html and js created. need to make scoreboard work.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a id="scoreboard" href="./scoreboard.html">Scoreboard</a>
     <div class="welcome">
         <h1>Javascript Code Quiz</h1>
         <p>A series of multiple choice questions will assess your Javascript knowledge.</p>
@@ -26,7 +27,8 @@
     </div>
 
     <div class="saveInfo">
-        <h1>Quiz Over. Save your score!</h1>
+        <h1>Quiz Over.</h1>
+        <p class="finalScore"></p>
         <label for="initials">Enter your initials:</label>
         <input type=text id="initials">
         <button class="submit">Submit</button>
