coreboard working, not using scoreboard separate html for now.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a id="scoreboard" href="./scoreboard.html">Scoreboard</a>
+    <!-- <a id="scoreboard" href="./scoreboard.html">Scoreboard</a> -->
     <div class="welcome">
         <h1>Javascript Code Quiz</h1>
         <p>A series of multiple choice questions will assess your Javascript knowledge.</p>
@@ -32,6 +32,11 @@
         <label for="initials">Enter your initials:</label>
         <input type=text id="initials">
         <button class="submit">Submit</button>
+    </div>
+
+    <div class="scoreboard">
+        <h1>Scoreboard</h1>
+        <p class="userDetails"></p>
     </div>
 
     <script src="./script.js"></script>
