--- a/scoreboard.html
+++ b/scoreboard.html
@@ -9,7 +9,8 @@
 <a href="./index.html">Home</a>
 
 <div>
-    <h1></h1>
+    <h1>Scoreboard</h1>
+    
 </div>
 
     <script src="./scoreboard.js"></script>
