scoreboard displaying, but not all info from object

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="scoreboard">
         <h1>Scoreboard</h1>
         <p class="userDetails"></p>
+        <ul class="scores-list"></ul>
     </div>
 
     <script src="./script.js"></script>
